--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
      <label for="media-type"
       >Media Type:
       <select id="media-type" required>
-       <option>select one</option>
-       <option value="tv">TV Show</option>
+       <option value=""></option>
+       <option value="tv show">TV Show</option>
        <option value="movie">Movie</option>
       </select>
      </label>
@@ -30,7 +30,7 @@
      <label for="genre"
       >Genre:
       <select id="genre">
-       <option>no preference</option>
+       <option value=""></option>
        <option value="action">Action / Adventure</option>
        <option value="animation">Animation</option>
        <option value="comedy">Comedy</option>
@@ -46,7 +46,7 @@
      <label for="rating">
       Rating:
       <select id="rating">
-       <option>no preference</option>
+       <option value=""></option>
        <option value="g">G</option>
        <option value="pg">PG</option>
        <option value="pg-13">PG-13</option>
