added rating and extra details into prompt

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       Rating:
       <select id="rating">
        <option value=""></option>
-       <option value="g">G</option>
-       <option value="pg">PG</option>
-       <option value="pg-13">PG-13</option>
-       <option value="r">R</option>
+       <option value=" rated g">G</option>
+       <option value=" rated pg">PG</option>
+       <option value=" rated pg-13">PG-13</option>
+       <option value="rated r">R</option>
       </select>
      </label>
      <label for="extra"
