--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
  </head>
  <body>
-  <div class="container">
+  <section class="display-normal">
    <header>
     <h1>📺 AI Movie / TV Show Generator 📺</h1>
     <h3>
@@ -16,56 +16,58 @@
      our AI find something for you!
     </h3>
    </header>
-   <main>
-    <form>
-     <label for="media-type"
-      >Media Type:
-      <select id="media-type" required>
-       <option value=""></option>
-       <option value="tv show">TV Show</option>
-       <option value="movie">Movie</option>
-      </select>
-     </label>
+   <form>
+    <label for="media-type"
+     >Media Type (required):
+     <select id="media-type" required>
+      <option value=""></option>
+      <option value="tv show">TV Show</option>
+      <option value="movie">Movie</option>
+     </select>
+    </label>
 
-     <label for="genre"
-      >Genre:
-      <select id="genre">
-       <option value=""></option>
-       <option value="action">Action / Adventure</option>
-       <option value="animation">Animation</option>
-       <option value="comedy">Comedy</option>
-       <option value="drama">Drama</option>
-       <option value="fantasy">Fantasy</option>
-       <option value="horror">Horror</option>
-       <option value="mystery">Mystery</option>
-       <option value="sci-fi">Science Fiction</option>
-       <option value="thriller">Thriller</option>
-      </select>
-     </label>
+    <label for="genre"
+     >Genre:
+     <select id="genre">
+      <option value=""></option>
+      <option value="action">Action / Adventure</option>
+      <option value="animation">Animation</option>
+      <option value="comedy">Comedy</option>
+      <option value="drama">Drama</option>
+      <option value="fantasy">Fantasy</option>
+      <option value="horror">Horror</option>
+      <option value="mystery">Mystery</option>
+      <option value="sci-fi">Science Fiction</option>
+      <option value="thriller">Thriller</option>
+     </select>
+    </label>
 
-     <label for="rating">
-      Rating:
-      <select id="rating">
-       <option value=""></option>
-       <option value=" rated g">G</option>
-       <option value=" rated pg">PG</option>
-       <option value=" rated pg-13">PG-13</option>
-       <option value="rated r">R</option>
-      </select>
-     </label>
-     <label for="extra"
-      >Any other preferences?
-      <textarea id="extra"></textarea>
-     </label>
-
-     <input id="submit" type="submit" />
-    </form>
-    <section>
-     <div class="description"></div>
-     <div class="image"></div>
-    </section>
-   </main>
-  </div>
+    <label for="rating">
+     Rating / Content Restriction:
+     <select id="rating">
+      <option value=""></option>
+      <option value="rated g">G: Content suitable for all ages</option>
+      <option value="rated pg">
+       PG: Some material may not be suitable for children
+      </option>
+      <option value=" rated pg-13">
+       PG-13: Some material may be appropriate for children under 13
+      </option>
+      <option value="rated r">R: Not appropriate for those 17 and under</option>
+     </select>
+    </label>
+    <label for="extra"
+     >Any other preferences?
+     <textarea
+      id="extra"
+      placeholder="Example: I like modern detective shows"></textarea>
+    </label>
+    <input id="submit" type="submit" value="Submit" />
+   </form>
+  </section>
+  <section id="response" class="hidden">
+   <div id="description"></div>
+  </section>
   <footer>
    This project is
    <a href="https://github.com/RebeccaCL303/movie-tv-generator" target="_blank"
