--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>📺 AI Movie / TV Show Generator 📺</title>
   <link href="./src/styles.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
  </head>
  <body>
   <section class="display-normal">
