added background and changed color scheme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>📺 AI Movie / TV Show Generator 📺</title>
+  <title>AI Movie / TV Show Generator</title>
   <link href="./src/styles.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
@@ -11,7 +11,7 @@
  <body>
   <section class="display-normal">
    <header>
-    <h1>📺 AI Movie / TV Show Generator 📺</h1>
+    <h1>AI Movie / TV Show Generator</h1>
     <h3>
      Not sure what to watch? Enter your preferences for a movie or show, and let
      our AI find something for you!
@@ -67,17 +67,28 @@
    </form>
   </section>
   <section id="response" class="hidden">
+   <h4>Your Recommedation:</h4>
    <div id="description"></div>
   </section>
   <footer>
-   This project is
-   <a href="https://github.com/RebeccaCL303/movie-tv-generator" target="_blank"
-    >open source</a
-   >
-   by
-   <a href="https://rebeccacl303.github.io" target="_blank"
-    >Rebecca Leibowitz</a
-   >
+   <p>
+    This project is
+    <a href="https://github.com/RebeccaCL303/movie-tv-generator" target="_blank"
+     >open source</a
+    >
+    by
+    <a href="https://rebeccacl303.github.io" target="_blank"
+     >Rebecca Leibowitz</a
+    >
+   </p>
+   <p>
+    Background image by
+    <a
+     href="https://www.freepik.com/free-vector/neon-grid-background_4394259.htm#query=vaporwave&position=3&from_view=keyword&track=sph&uuid=512a748a-6c7d-4862-85e2-71fde6c7558a"
+     >rawpixel.com</a
+    >
+    on Freepik
+   </p>
   </footer>
   <script src="./src/script.js"></script>
  </body>
