made content responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
  </head>
  <body>
-  <section class="display-normal">
+  <section>
    <header>
     <h1>AI Movie / TV Show Generator</h1>
     <h3>
