added more genres, and instructions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
      Not sure what to watch? Enter your preferences for a movie or show, and let
      our AI find something for you!
     </h3>
+    <p>(hint: the more details you provide, the better the recommendation!)</p>
    </header>
    <form>
     <label for="media-type"
@@ -35,11 +36,15 @@
       <option value="animation">Animation</option>
       <option value="comedy">Comedy</option>
       <option value="drama">Drama</option>
+      <option value="documentary">Documentary</option>
       <option value="fantasy">Fantasy</option>
+      <option value="historial">Historical</option>
       <option value="horror">Horror</option>
       <option value="mystery">Mystery</option>
+      <option value="romance">Romance</option>
       <option value="sci-fi">Science Fiction</option>
       <option value="thriller">Thriller</option>
+      <option value="western">Western</option>
      </select>
     </label>
 
@@ -47,6 +52,7 @@
      Rating / Content Restriction:
      <select id="rating">
       <option value=""></option>
+      <option value="">None</option>
       <option value="rated g">G: Content suitable for all ages</option>
       <option value="rated pg">
        PG: Some material may not be suitable for children
