added feature to ask for a different, but similar recommendation

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <section id="response" class="hidden">
    <h4>Your Recommedation:</h4>
    <div id="description"></div>
+   <button id="another-one">Give me another one</button>
   </section>
   <footer>
    <p>
